-Added game init servlet -Added text -Added testing for getting text files